YUK-25254 : Dev task : Change Text Input Styling(fixed alignment issue of Asset dashboard and padding issues and multispeak issue)

--- a/yukon-client/yukon-web/src/com/cannontech/web/common/resources/yukon.less
+++ b/yukon-client/yukon-web/src/com/cannontech/web/common/resources/yukon.less
@@ -168,7 +168,7 @@ textarea {
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
     margin: 0;
-    padding: 21px 12px 6px;
+    padding: 10px 6px 6px;
     box-sizing: content-box;
     transition: border .1s ease-in-out,background-color .1s ease-in-out;
     font-weight: 400;
@@ -185,7 +185,7 @@ textarea {
     &:not([readonly]):focus {
         border: 1px solid #f7f8f8;
         outline: none;
-    	padding: 20px 12px 6px;
+    	padding: 9px 6px 6px;
 		border-bottom: 2px solid @primary-color;
     }
     
@@ -374,8 +374,9 @@ input[type=radio] {
 
 .stepper select.stepper-select {
     background-image: none;
-    padding-right: 5px;
+    padding: 10px 6px 6px !important;
     letter-spacing: 0;
+    height: 19px !important;
     
 }
 
@@ -588,7 +589,6 @@ table.matrix{
 
 	td input {
 		font-size: 13px;
-		padding-top: 12px !important;
 	}
     
     tr.focused, 
@@ -1122,7 +1122,7 @@ select.error {
 
 textarea.error {
     background-color: #f7f8f8;
-    border-color: @red;
+    border-bottom-color: @red;
 }
 
 .state-box {
@@ -1481,7 +1481,6 @@ hr.dashed,
     float: left;
     margin-right: 5px;
     border: 1px solid #aaa;
-    height: 26px;
 }
 .datetimeEntry_wrap.date { width: 152px; }
 .datetimeEntry_wrap.dateTime { min-width: 185px; }
